# QEverCloudGenerator

./: CMakeLists.txt  LICENSE  README.md
cmake/modules/: QEverCloudCompilerSettings.cmake  QEverCloudGeneratorCMakePolicies.cmake  QEverCloudGeneratorCompilerSettings.cmake  QEverCloudSetupQt.cmake
lemon/: CMakeLists.txt  main.c
thrift/src/: Errors.thrift  Limits.thrift  NoteStore.thrift  Types.thrift  UserStore.thrift
thrift_parser/: CMakeLists.txt  Generator.cpp  Generator.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  ParserHelper.h  main.cpp  thrift_lemon.y
