cmake_minimum_required(VERSION 2.8.11)

set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules)

include(QEverCloudGeneratorCMakePolicies)
SET_POLICIES()

project(QEverCloudGenerator)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

include(QEverCloudGeneratorSetupQt)
include(QEverCloudGeneratorCompilerSettings)

add_subdirectory(lemon)
get_directory_property(lemon DIRECTORY lemon DEFINITION PROJECT_NAME)

add_subdirectory(thrift_parser)
